fix scroll overflow

--- a/src/globals.css
+++ b/src/globals.css
@@ -10,6 +10,7 @@
   }
 
   body {
+    overflow: hidden;
     @apply bg-dark-1 text-white min-h-screen font-inter;
   }
 }
